@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-26T16:20:38Z",
-  "count_outdated" : 474,
-  "uniques_outdated" : 222,
+  "timestamp" : "2023-08-27T16:20:49Z",
+  "count_outdated" : 476,
+  "uniques_outdated" : 223,
   "count" : 486,
   "uniques" : 229,
   "clones" : [
-    {
-      "timestamp": "2023-08-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-14T00:00:00Z",
       "count": 2,
