@@ -1,12 +1,7 @@
 {
-  "count": 12,
+  "count": 10,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-08-13T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-14T00:00:00Z",
       "count": 2,
